--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.11",
     "@pbe/react-yandex-maps": "^1.2.3",
+    "@reduxjs/toolkit": "^1.9.3",
+    "graphql": "^16.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "ol": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "redux": "^4.2.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
