--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,8 @@ version: "3.9"
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
+    command: npm run dev
     image: myapp:latest
     container_name: myapp
     ports:
