--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   app:
     build: .
-    command: npm run dev -- --https
+    command: npm run dev
     image: myapp:latest
     container_name: myapp
     ports:
